[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memabra"
version = "0.2.0"
description = "Bio-inspired memory and intuition skill for AI agents (OpenClaw compatible)"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "TacitLab", email = "hello@tacitlab.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "scikit-learn>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/TacitLab/memabra"
Documentation = "https://github.com/TacitLab/memabra/tree/main/docs"
Repository = "https://github.com/TacitLab/memabra"
Issues = "https://github.com/TacitLab/memabra/issues"

[tool.setuptools.packages.find]
where = ["skill"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["skill"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
